# Amplifier

./: .gitignore  .mcp.json  CLAUDE.md  FUTURE.md  README.md  SLC.md  about me.txt  ai chat transcript - kings.txt  ai chat transcript - nili.thp.txt  amplifier.spec  auto-poster-prd.md  base64.txt  campaign_poster.spec  core product doc.txt  entities.json  installer.iss  inventory 2.txt  inventory 3.txt  inventory.txt  mempalace.yaml  previous convo.txt  pyproject.toml  ralph.sh  recon2.txt  requirements-build.txt  requirements-test.txt  requirements.txt  vercel.json
.claude/: ralph-tasks.md  settings.local.json  task-context.md
.playwright-cli/: page-2026-03-24T12-46-24-246Z.yml  page-2026-03-24T12-57-20-308Z.yml  page-2026-03-24T12-57-54-985Z.yml  page-2026-03-24T12-59-03-444Z.yml  page-2026-03-24T12-59-29-002Z.yml  page-2026-03-24T12-59-54-826Z.yml  page-2026-03-24T13-01-44-667Z.yml  page-2026-03-24T13-03-34-224Z.yml  page-2026-03-24T13-04-08-320Z.yml  page-2026-03-24T13-59-56-325Z.yml  page-2026-03-24T14-02-44-841Z.yml  page-2026-03-24T14-02-46-298Z.yml  page-2026-03-24T14-02-47-761Z.yml  page-2026-03-24T14-03-42-748Z.yml  page-2026-03-24T14-04-03-991Z.yml  page-2026-03-24T14-04-14-416Z.yml  page-2026-03-24T14-04-34-754Z.yml  page-2026-03-24T14-04-55-929Z.yml  (+34 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs  sidecar.rs  state.rs  tray.rs
tauri-app/src-tauri/src/commands/: auth.rs  campaigns.rs  dashboard.rs  earnings.rs  mod.rs  platforms.rs  posts.rs  settings.rs
(+517 files in other folders)
